// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pager /> should not render items 1`] = `
<DocumentFragment>
  <ul
    class="c-eiNZiT"
  />
</DocumentFragment>
`;

exports[`<Pager /> should render first page 1`] = `
<DocumentFragment>
  <ul
    class="c-eiNZiT"
  >
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="next-page"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="last-page"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render last page 1`] = `
<DocumentFragment>
  <ul
    class="c-eiNZiT"
  >
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="first-page"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="previous-page"
        title="Previous page"
      >
        «
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<Pager /> should render second page 1`] = `
<DocumentFragment>
  <ul
    class="c-eiNZiT"
  >
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="first-page"
        title="First page"
      >
        ««
      </button>
    </li>
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="previous-page"
        title="Previous page"
      >
        «
      </button>
    </li>
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="next-page"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="c-ggYOOi c-eUyIYb c-eUyIYb-bWIhvO-color-secondary c-jpqMWC"
        data-testid="last-page"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</DocumentFragment>
`;
